Created dropdown for drug types and adjusted index view to show saved drug types

--- a/app/views/drugs/_form.html.haml
+++ b/app/views/drugs/_form.html.haml
@@ -3,4 +3,4 @@
   = f.text_field :name
 %li
   = f.label :type, "Type"
-  = f.text_field :type
+  = f.select(:type, options_for_select([["Standard(Non-ESA, Non-Immunosuppressant)", " "], ["ESA", "Esa"], ["Immunosuppressant", "Immunosuppressant"]])) 
