--- a/app/views/drugs/new.html.haml
+++ b/app/views/drugs/new.html.haml
@@ -5,7 +5,7 @@
 
 .row
   .large-6.columns
-    = form_for @drug, :method => :post, :url => drug_path(@drug) do |f|
+    = form_for @drug, :method => :post, :url => drugs_path(@drug) do |f|
       %ul.no-bullet
         = render partial: "drugs/form", locals: { f: f }   
 
