--- a/app/views/drugs/index.html.haml
+++ b/app/views/drugs/index.html.haml
@@ -1,12 +1,17 @@
 %h1 Existing Drugs List
 
-- @drugs.each do |t|
+.row
+  .small-12.large-6.columns
+    %ul.no-bullet.stripy-list
+      - @drugs.each do |t|
+        %li.row
+          .small-4.large-8.columns
+            = t.name
+          .small-4.large-2.columns
+            = link_to "Edit", edit_drug_path(t.id)
+          .small-4.large-2.columns
+            = link_to "Delete", drug_path(t.id), id: "#{t.id}-drug", method: :delete, data: { confirm: "Are you sure you want to delete this drug?" }
 
-  %ul.no-bullet
-    %li
-      = t.name
-      Type: #{t.display_type}
-      = link_to "Edit", edit_drug_path(t.id)
-      = link_to "Delete", drug_path(t.id), id: "#{t.id}-drug", method: :delete, data: { confirm: "Are you sure you want to delete this drug?" }
 
-
+  .small-12.large-6.columns
+    = link_to "Add a New Drug", new_drug_path, :class => "button tiny"
