--- a/app/views/drugs/new.html.haml
+++ b/app/views/drugs/new.html.haml
@@ -10,3 +10,5 @@
         = render partial: "drugs/form", locals: { f: f }   
 
         = submit_tag "Save New Drug", class: "button tiny right"
+
+        %li= link_to "Cancel", drugs_path, :class => "button tiny"
