--- a/app/views/drugs/index.html.haml
+++ b/app/views/drugs/index.html.haml
@@ -5,7 +5,9 @@
     %ul.no-bullet.stripy-list
       - @drugs.each do |t|
         %li.row
-          .small-4.large-8.columns
+          .small-4.large-4.columns
+            = t.type
+          .small-4.large-4.columns
             = t.name
           .small-4.large-2.columns
             = link_to "Edit", edit_drug_path(t.id)
