--- a/app/views/drugs/index.html.haml
+++ b/app/views/drugs/index.html.haml
@@ -16,4 +16,4 @@
 
 
   .small-12.large-6.columns
-    = link_to "Add a New Drug", new_drug_path, :class => "button tiny"
+    = link_to "Add New Drug", new_drug_path, :class => "button tiny"
