--- a/app/views/drugs/index.html.haml
+++ b/app/views/drugs/index.html.haml
@@ -1,5 +1,9 @@
 .row
-  %h5 Existing Drugs List
+  %h4 Existing Drugs List
+
+.row
+  .small-12.large-6.columns
+    = link_to "Add New Drug", new_drug_path, :class => "button tiny"
 
 .row
   .small-12.large-6.columns
@@ -16,5 +20,4 @@
             = link_to "Delete", drug_path(t.id), id: "#{t.id}-drug", method: :delete, data: { confirm: "Are you sure you want to delete this drug?" }
 
 
-  .small-12.large-6.columns
-    = link_to "Add New Drug", new_drug_path, :class => "button tiny"
+  
