--- a/app/views/drugs/index.html.haml
+++ b/app/views/drugs/index.html.haml
@@ -6,6 +6,14 @@
     = link_to "Add New Drug", new_drug_path, :class => "button tiny"
 
 .row
+  .small-12.large-6.columns.find-drug-list 
+    = label_tag :drug_search, "Drug"
+    = text_field_tag :drug_search, nil, :class => "find_drug", :placeholder => "Search drug by name"
+  
+
+    %ul.no-bullet.stripy-list.drug-results-admin
+
+.row
   .small-12.large-6.columns
     %ul.no-bullet.stripy-list
       - @drugs.each do |t|
@@ -20,4 +28,3 @@
             = link_to "Delete", drug_path(t.id), id: "#{t.id}-drug", method: :delete, data: { confirm: "Are you sure you want to delete this drug?" }
 
 
-  
