--- a/app/views/drugs/new.html.haml
+++ b/app/views/drugs/new.html.haml
@@ -12,4 +12,4 @@
 
         = submit_tag "Save New Drug", class: "button tiny right"
 
-        %li= link_to "Cancel", drugs_path, :class => "button tiny"
+        %li= link_to "Cancel", drugs_path, :class => "button tiny cancel"
