--- a/app/views/drugs/edit.html.haml
+++ b/app/views/drugs/edit.html.haml
@@ -12,4 +12,4 @@
 
         = submit_tag "Update Drug", class: "button tiny right"
 
-        = link_to "Cancel", drugs_path, class: "button tiny left"
+        = link_to "Cancel", drugs_path, class: "button tiny left cancel"
