--- a/app/views/drugs/index.html.haml
+++ b/app/views/drugs/index.html.haml
@@ -8,7 +8,7 @@
     
   .small-12.large-6.columns.find-drug-list.left 
     = label_tag :drug_search, "Drug"
-    = text_field_tag :drug_search, nil, :class => "find_drug", :placeholder => "Search drug by name"
+    = text_field_tag :drug_search, nil, :class => "find_drug", :placeholder => "Search drug by name or type"
   
 
     %ul.no-bullet.stripy-list.drug-results-admin
