--- a/app/views/drugs/edit.html.haml
+++ b/app/views/drugs/edit.html.haml
@@ -10,6 +10,6 @@
 
         = render partial: "drugs/form", locals: { f: f }
 
+      .row.button-padding  
         = submit_tag "Update Drug", class: "button tiny right"
-
         = link_to "Cancel", drugs_path, class: "button tiny left cancel"
