--- a/app/assets/stylesheets/drug_drug_types.css.scss
+++ b/app/assets/stylesheets/drug_drug_types.css.scss
@@ -1,3 +1,8 @@
 // Place all the styles related to the drug_drug_types controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.drug_type_list {
+  border: 1px solid #f2f2f2;
+  padding: 2em;
+} 
