--- a/app/views/drugs/index.html.haml
+++ b/app/views/drugs/index.html.haml
@@ -13,15 +13,12 @@
 
     %ul.no-bullet.stripy-list.drug-results-admin
 
-  
   .small-12.large-6.columns.right
     %ul.no-bullet.stripy-list
       - @drugs.each do |t|
         %li.row
           .small-4.large-4.columns
-            = t.type
-          .small-4.large-4.columns
-            = t.name
+            = link_to "#{t.name}", drug_drug_drug_types_path("#{t.id}", @drug_drug_types), title: "Edit drug categories/types"
           .small-4.large-2.columns
             = link_to "Edit", edit_drug_path(t.id)
           .small-4.large-2.columns
