--- a/app/views/drugs/index.html.haml
+++ b/app/views/drugs/index.html.haml
@@ -1,17 +1,17 @@
 .row
   %h4 Existing Drugs List
 
-.row  
+.row
   = link_to "Add New Drug", new_drug_path, :class => "button tiny"
 
-.row 
-    
-  .small-12.large-6.columns.find-drug-list.left 
-    = label_tag :drug_search, "Drug"
-    = text_field_tag :drug_search, nil, :class => "find_drug", :placeholder => "Search drug by name or type"
-  
+.row
 
-    %ul.no-bullet.stripy-list.drug-results-admin
+  .small-12.large-6.columns.find-drug-list.left
+    = label_tag :drug_search, "Drug"
+    = search_field_tag :drug_search, nil, :placeholder => 'Search drug by name or type'
+
+
+    %ul#drug-results.no-bullet.stripy-list
 
   .small-12.large-6.columns.right
     %ul.no-bullet.stripy-list
@@ -22,6 +22,5 @@
           .small-4.large-2.columns
             = link_to "Edit", edit_drug_path(t.id)
           .small-4.large-2.columns
-            = link_to "Delete", drug_path(t.id), id: "#{t.id}-drug", method: :delete, :class => "delete", data: { confirm: "Are you sure you want to delete this drug?"} 
-
+            = link_to "Delete", drug_path(t.id), id: "#{t.id}-drug", method: :delete, :class => "delete", data: { confirm: "Are you sure you want to delete this drug?"}
 
