--- a/app/views/drugs/index.html.haml
+++ b/app/views/drugs/index.html.haml
@@ -12,7 +12,7 @@
   = link_to "Add drug", new_drug_path, :class => "button tiny"
 
 .row.collapse
-  .small-6.large-8.columns.right
+  .small-6.large-8.columns.right.pagination-top
     = paginate @drugs
 
 .row
@@ -30,5 +30,5 @@
               data: { confirm: "Are you sure you want to delete this drug?"}
 
 .row.collapse
-  .small-6.large-8.columns.right
+  .small-6.large-8.columns.right.pagination-bottom
     = paginate @drugs
