--- a/app/views/drugs/index.html.slim
+++ b/app/views/drugs/index.html.slim
@@ -4,12 +4,12 @@
 .row.collapse
   = search_form_for @drugs_search do |f|
     .small-9.large-8.columns
-      = f.search_field :name_or_drug_types_name_start, :placeholder => 'Search drug by name or type'
+      = f.search_field :name_or_drug_types_name_start, placeholder: 'Search drug by name or type'
     .small-3.large-4.columns
       = f.submit 'Search', class: 'button tiny'
 
 .row
-  = link_to "Add drug", new_drug_path, :class => "button tiny"
+  = link_to "Add drug", new_drug_path, class: "button tiny"
 
 .row.collapse
   .small-6.large-8.columns.right.pagination-top
