--- a/app/views/drugs/new.html.slim
+++ b/app/views/drugs/new.html.slim
@@ -6,10 +6,10 @@
 
 .row
   .large-6.columns
-    = form_for @drug, :method => :post, :url => drugs_path(@drug) do |f|
-     
+    = form_for @drug, method: :post, url: drugs_path(@drug) do |f|
+
       = render partial: "drugs/form", locals: { f: f }
 
       = submit_tag "Save New Drug", class: "button tiny right save"
 
-    = link_to "Cancel", drugs_path, :class => "button tiny cancel"
+    = link_to "Cancel", drugs_path, class: "button tiny cancel"
