--- a/app/views/renalware/drugs/index.html.slim
+++ b/app/views/renalware/drugs/index.html.slim
@@ -12,19 +12,23 @@
   = link_to "Add drug", new_drug_path, class: "button tiny"
 
 .row
-  ul.drugs.no-bullet.stripy-list
-    - @drugs.each do |t|
-      li.row
-        .small-6.large-8.columns.name
-          = link_to "#{t.name}", drug_drug_drug_types_path("#{t.id}", @drug_drug_types), title: "Edit drug categories/types"
-        .small-4.large-4.columns
-          = link_to "Edit", edit_drug_path(t.id), class: 'save button tiny'
-          = link_to 'Delete', drug_path(t.id),
-            id: "#{t.id}-drug",
-            method: :delete,
-            class: 'cancel button tiny',
-            data: { confirm: "Are you sure you want to delete this drug?"}
+  table.drugs
+    thead
+      tr
+        th Options
+        th Name
+    tbody
+      - @drugs.each do |t|
+        tr
+          td
+            = link_to "Edit", edit_drug_path(t.id)
+            |&nbsp;|&nbsp;
+            = link_to 'Delete', drug_path(t.id),
+              id: "#{t.id}-drug",
+              method: :delete,
+              data: { confirm: "Are you sure you want to delete this drug?"}
+          td
+            = link_to "#{t.name}", drug_drug_drug_types_path("#{t.id}", @drug_drug_types), title: "Edit drug categories/types"
 
-.row.collapse
-  .small-6.large-8.columns.right.pagination-bottom
-    = paginate @drugs
+.row
+  = paginate @drugs
