--- a/app/views/renalware/drugs/drugs/edit.html.slim
+++ b/app/views/renalware/drugs/drugs/edit.html.slim
@@ -4,10 +4,10 @@
 
 .row
   .large-6.columns
-    = form_for @drug, as: :drug, method: :put, url: drug_path(@drug) do |f|
-      = render partial: "renalware/drugs/form", locals: { f: f }
+    = form_for @drug, method: :put, url: drugs_drug_path(@drug) do |f|
+      = render partial: "form", locals: { f: f }
 
       .row.button-padding
         = submit_tag "Update", class: "button"
         span= " or "
-        = link_to "cancel", drugs_path
+        = link_to "cancel", drugs_drugs_path
