--- a/app/views/renalware/drugs/drugs/new.html.slim
+++ b/app/views/renalware/drugs/drugs/new.html.slim
@@ -5,10 +5,10 @@
 
 .row
   .large-6.columns
-    = form_for @drug, method: :post, url: drugs_path(@drug) do |f|
+    = form_for @drug, method: :post, url: drugs_drugs_path(@drug) do |f|
 
-      = render partial: "renalware/drugs/form", locals: { f: f }
+      = render partial: "form", locals: { f: f }
 
       = submit_tag "Save", class: "button"
       span= " or "
-      = link_to "cancel", drugs_path
+      = link_to "cancel", drugs_drugs_path
