--- a/app/views/renalware/drugs/index.html.slim
+++ b/app/views/renalware/drugs/index.html.slim
@@ -22,7 +22,7 @@
             = link_to 'Delete', drug_path(t.id),
               id: "#{t.id}-drug",
               method: :delete,
-              data: { confirm: "Are you sure you want to delete this drug?"}
+              data: { confirm: I18n.t("prompts.confirm_delete") }
           td
             = link_to t.name, edit_drug_path(t.id)
 
