Clean-up markup for drugs

--- a/app/views/renalware/drugs/drugs/edit.html.slim
+++ b/app/views/renalware/drugs/drugs/edit.html.slim
@@ -1,6 +1,6 @@
-= render "header"
-
-= render partial: "renalware/shared/errors", locals: { model: @drug }
+.row
+  = render "header"
+  = render partial: "renalware/shared/errors", locals: { model: @drug }
 
 .row
   .large-6.columns
