Removed instance variables for drug types in drugs controller - moved to drug form view.

--- a/app/views/renalware/drugs/drugs/_form.html.slim
+++ b/app/views/renalware/drugs/drugs/_form.html.slim
@@ -4,4 +4,4 @@ h6
   | Select categories/types for this drug:
 
 .row
-  = f.collection_check_boxes :drug_type_ids, @drug_types, :id, :name
+  = f.collection_check_boxes :drug_type_ids, Renalware::Drugs::Type.all, :id, :name
