Converted drug form to simple_form.

--- a/app/views/renalware/drugs/drugs/_form.html.slim
+++ b/app/views/renalware/drugs/drugs/_form.html.slim
@@ -1,5 +1,4 @@
-= f.label :name, "Drug Name"
-= f.text_field :name
+= f.input :name, label: "Drug Name"
 
 h6
   | Select categories/types for this drug:
